syntax = "proto3";
package blog;
option go_package = "blog-app/proto";
import "google/protobuf/empty.proto";

message CreateBlogMessage {
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message BlogMessage {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message BlogIdMessage {
  string id = 1;
}

service BlogService {
  rpc CreateBlog (CreateBlogMessage) returns (BlogIdMessage);
  rpc readBlog (BlogIdMessage) returns (BlogMessage);
  rpc updateBlog (BlogMessage) returns (google.protobuf.Empty);
  rpc deleteBlog (BlogIdMessage) returns (google.protobuf.Empty);
  rpc ListAllBlogs (google.protobuf.Empty) returns (stream BlogMessage);
}